# crazyEights

./: CMakeLists.txt  README.md  main.cpp
